@@ -1,6 +1,7 @@
 ##########################################################################
 #  
 #  Copyright (c) 2012, John Haddon. All rights reserved.
+#  Copyright (c) 2012, Image Engine Design Inc. All rights reserved.
 #  
 #  Redistribution and use in source and binary forms, with or without
 #  modification, are permitted provided that the following conditions are
@@ -42,5 +43,6 @@ import SceneView
 import RenderUI
 import DisplaysUI
 import OptionsUI
+import OpenGLAttributesUI
 from AlembicPathPreview import AlembicPathPreview
 import SceneContextVariablesUI
