@@ -1,6 +1,7 @@
 //////////////////////////////////////////////////////////////////////////
 //  
 //  Copyright (c) 2012, John Haddon. All rights reserved.
+//  Copyright (c) 2012, Image Engine Design Inc. All rights reserved.
 //  
 //  Redistribution and use in source and binary forms, with or without
 //  modification, are permitted provided that the following conditions are
@@ -64,6 +65,7 @@
 #include "GafferScene/SceneContextVariables.h"
 #include "GafferScene/RenderCamera.h"
 #include "GafferScene/SubTree.h"
+#include "GafferScene/OpenGLAttributes.h"
 
 #include "GafferSceneBindings/ScenePlugBinding.h"
 #include "GafferSceneBindings/DisplaysBinding.h"
@@ -143,5 +145,6 @@ BOOST_PYTHON_MODULE( _GafferScene )
 	GafferBindings::NodeClass<SceneContextVariables>();
 	GafferBindings::NodeClass<RenderCamera>();
 	GafferBindings::NodeClass<SubTree>();
+	GafferBindings::NodeClass<OpenGLAttributes>();
 
 }
